# M3XABR_NEW

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BODY.md  CLAUDE.md  CONTRIBUTING.md  LESSONS.md  README.md  pyproject.toml
.cursor/rules/: m3xabr.mdc
.github/: copilot-instructions.md
.github/workflows/: body_in_sync.yml  stack_in_sync.yml
config/: classifier_prompt.md  evaluator_prompt.md  retrieval_scoring.yaml  router_prompt.md
docs/: ROUTING_DECISIONS.md
docs/diagrams/: expertise-pool.mmd  pipeline.mmd
docs/stack/: README.md  anthropic.md  cohere.md  lancedb.md  mypy.md  openai.md  pyarrow.md  pydantic.md  pytest-asyncio.md  pytest.md  python-dateutil.md  pyyaml.md  rich.md  ruff.md  typer.md  voyageai.md  yfinance.md
examples/: README.md  query_bridge.txt  query_drift.txt  query_electoral.txt  query_fiscal.txt
examples/expected_outputs/: README.md
examples/sample_corpus/: INGEST.md  documents.json
expertises/: economic_forecasts.md  economic_releases.md  electoral_analysis.md  fiscal_analysis.md  institutional_source_briefing.md  m3xabr_kernel.md  market_intelligence.md  monetary_analysis.md  narrative_drift_detection.md  political_analysis.md  scope_filter_brazil.md
m3xabr_core/: __init__.py  cli.py  pipeline.py  schemas.py
m3xabr_core/actors/: __init__.py  agent_hub.py  assembler.py  classifier.py  evaluator.py  retriever.py  router.py  synthesizer.py
m3xabr_core/backends/: __init__.py  embeddings.py  llm.py  vector_db.py
tests/: test_assembler.py  test_body_in_sync.py  test_pipeline.py  test_router.py  test_stack_in_sync.py
tools/: check_stack_in_sync.py  regenerate_body.py
